--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Vmlabs.Mobile</title>
+    <title>Communion.Mobile</title>
     <link rel="stylesheet" href="resources/css/app.css" type="text/css">
     <script type="text/javascript" src="js/sencha-touch-all.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -137,7 +137,7 @@
 
     </style>
 </head>
-<body onload="onLoading()" id="vmlabs-pg-body">
+<body onload="onLoading()" id="Communion-pg-body">
 <div id="appLoadingIndicator">
     <div></div>
     <div></div>
